Fixed the Inventory Text Overflow Bug
- I also changed how items worked, where before items were just strings and now there is a separate item class cleverly called "Item", which holds the information (the name and the type of the item which is a TS enum).
- I've also added a const called "itemDb" which is a dictionary where the key is a string (the name of the item where spaces are replaced with underscores and it's all lower case) and the value is an item class instance for the respective item of the key.

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ h1 {
     background-color: #dff0d8;
     font-family: 'Fira Code';
     font-size: 0.9rem;
-	width: 40%;
+	width: 90%;
 }
 .newbutton {
     display: flex;
